Fixed spacing for 404 page

--- a/src/style/NotFound.scss
+++ b/src/style/NotFound.scss
@@ -4,6 +4,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  margin-left: $sidebar-width;
   justify-content: center;
   align-items: center;
   & > p {
@@ -11,8 +12,9 @@
   }
 }
 
-@media screen and (min-width: $screen-breakpoint) {
+@media screen and (max-width: $screen-breakpoint - 1) {
   .NotFound-center {
-    margin-left: $sidebar-width;
+    margin-left: 0;
+    height: calc(100vh - #{$navbar-height});
   }
 }
