--- a/src/style/_globals.scss
+++ b/src/style/_globals.scss
@@ -1,2 +1,3 @@
 $sidebar-width: 160px;
+$navbar-height: 56px;
 $screen-breakpoint: 620px;
